# meshcore-firmware

./: LICENSE  README.md
firmware/: Cargo.toml  README.md
firmware/boards/diy-esp32/: Cargo.toml  README.md
firmware/boards/diy-esp32/.cargo/: config.toml
firmware/boards/heltec_v3/: Cargo.toml  README.md
firmware/boards/heltec_v3/.cargo/: config.toml
firmware/boards/soc/: README.md
firmware/boards/soc/esp32/: Cargo.toml
firmware/boards/soc/esp32/src/: lib.rs
firmware/boards/soc/esp32s3/: Cargo.toml
firmware/common/: Cargo.toml
firmware/common/src/: lib.rs
firmware/meshcore/: Cargo.toml  README.md
firmware/meshcore/src/: companion.rs  lib.rs  repeater.rs
firmware/meshcore/src/app_interface/: ble.rs  command_stream_handler.rs  companion_protocol.rs  mod.rs
firmware/meshcore/src/interface/: ble.rs  mod.rs
firmware/meshcore/src/lora/: v1.rs
firmware/meshcore/src/packet/: mod.rs  v1.rs
firmware/soc/: README.md
firmware/soc/esp32/: Cargo.toml
firmware/soc/esp32/src/: lib.rs
