[package]
name = "common"
version = "0.1.0"
license = "MIT"
edition = "2024"
publish = false


[dependencies]
log = "*"

# embedded utils
#-------------------------------------------------------------------------------
# critical-section = "*"
static_cell = "*"
#-------------------------------------------------------------------------------

# use the embassay RTOS
#-------------------------------------------------------------------------------
embassy-executor = { version = "*", features = ["log"] }
embassy-time = { version = "*", features = ["log"] }
embassy-sync = { version = "*", features = ["log"] }
embassy-embedded-hal = "*"

# embassy-futures = "*"
#-------------------------------------------------------------------------------

# Hardware drivers
#-------------------------------------------------------------------------------
# provide LORA radio drivers
lora-phy = "*"
#-------------------------------------------------------------------------------

# BLE service
trouble-host = { version = "*", features = [
    "default-packet-pool-mtu-255",
    "derive",
    "scan",
] }
