[package]
name = "common"
version = "0.1.0"
license = "MIT"
edition = "2024"
publish = false


[dependencies]
log = "*"

# embedded utils
#-------------------------------------------------------------------------------
# critical-section = "*"
static_cell = "*"
#-------------------------------------------------------------------------------

# use the embassay RTOS
#-------------------------------------------------------------------------------
embassy-executor = { version = "*", features = ["log"] }
embassy-time = { version = "*", features = ["log"] }
embassy-embedded-hal = "*"
embassy-sync = { version = "*", features = ["log"] }
# FIXME lora-phy requires older embedded-sync crate
# embassy-sync = { version="0.6.2", features = ["log"] }

# embassy-futures = "*"
#-------------------------------------------------------------------------------

# Hardware drivers
#-------------------------------------------------------------------------------
# provide LORA radio drivers
lora-phy = "*"
#-------------------------------------------------------------------------------

# BLE service
trouble-host = { version = "*", features = [
    "default-packet-pool-mtu-255",
    "derive",
    "scan",
] }
