[package]
name = "meshcore_roles"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
log = { version = "*", optional = true }
defmt = { version = "*", optional = true }

# provide no_std support
# heapless = "*"
heapless = "0.9" # FIXME latest version supported by trouble-host
static_cell = "*"


# provide embassy RTOS methods
embassy-sync = "*"
embassy-futures = "*"


# BLE service
trouble-host = { version = "*", default-features = false, features = [
    "peripheral",
    "gatt",
    "derive",   # provide macros
    "default-packet-pool-mtu-1024", # max out MTU size to maximize bandwidth
    # see https://github.com/embassy-rs/trouble/blob/main/host/Cargo.toml#L59
    #   for additional configuration by features
] }
# trouble-host = { version = "0.6.0", features = [
#     "default-packet-pool-mtu-255",
#     "derive",
#     "scan",
# ] }

# MeshCore = { version = "*", default-features = false }
[dependencies.MeshCore]
git = "https://git.housedillon.com/wdillon/Meshcore-rs.git"
# FIXME unable to build for no_std currently
# default-features = false

[features]
default = ["log"]

log = [
    "dep:log",
    "embassy-sync/log",
    "trouble-host/log",
]
defmt = [
    "dep:defmt",
    "embassy-sync/defmt",
    "trouble-host/defmt",
]

std = [
    "MeshCore/std"
]