[package]
name = "soc-esp32s3"
version = "0.1.0"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
log = "*"

embassy-executor = { version = "*", features = ["log"] }
# embassy-time = { version = "*", features = ["log"] }
# embassy-sync = "*"
# critical-section = "*"

# ESP32 cargo using git (rather than cargo version)
# - as cargo release isn't great for WiFi/Bluetooth
[dependencies.esp-hal]
git = "https://github.com/esp-rs/esp-hal"
# features = ["log-04", "unstable"]
features = ["unstable", "esp32s3"]

# provide println driver for logging
[dependencies.esp-println]
git = "https://github.com/esp-rs/esp-hal"
features = ["log-04", "esp32s3"]

# (optional) provide ESP32 supplied panic handler
[dependencies.esp-backtrace]
git = "https://github.com/esp-rs/esp-hal"
features = ["println", "colors", "esp32s3"]

# support ESP32 rtos
[dependencies.esp-rtos]
git = "https://github.com/esp-rs/esp-hal"
features = ["embassy", "esp-radio", "esp-alloc", "esp32s3"]

# support ESP32 radio
[dependencies.esp-radio]
git = "https://github.com/esp-rs/esp-hal"
features = ["unstable", "esp32s3"]
# alloc required by esp-radio
[dependencies.esp-alloc]
git = "https://github.com/esp-rs/esp-hal"
features = [
    # "internal-heap-stats",  # used to debug memory leaks in esp32 HAL radio
    "esp32s3",
]
# support reclaiming bootloader RAM for esp-alloc
[dependencies.esp-bootloader-esp-idf]
git = "https://github.com/esp-rs/esp-hal"
features = ["esp32s3"]